--- a/TrillionBeauty/src/app/common/navbar/navbar.component.scss
+++ b/TrillionBeauty/src/app/common/navbar/navbar.component.scss
@@ -72,3 +72,12 @@
     transform: translateY(0);
   }
 }
+
+@media screen and (max-width: 576px) {
+  .logo-letter,
+  .logo-word {
+    font-size: 1rem;
+    height: 1.5rem;
+    margin: 0.1rem;
+  }
+}
