--- a/TrillionBeauty/src/app/pages/home/home.component.scss
+++ b/TrillionBeauty/src/app/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 .stories {
   padding: 10rem 0;
   position: relative;
+  display: flex;
 }
 
 .video-container {
@@ -23,10 +24,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 100%;
+  margin: 2rem;
 }
 
 .story-bg {
-  padding: 5rem;
+  padding: 2rem 0;
   width: 70%;
 }
 
@@ -81,4 +84,55 @@
   color: #fff;
   box-shadow: 0 0 3rem 0.2rem rgba(95, 94, 94, 0.6);
   font-size: 1.6rem;
+}
+
+@media screen and (max-width: 576px) {
+  .video-container {
+    height: 100%;
+  }
+
+  .stories-wrapper {
+    margin: 0;
+  }
+
+  .story-bg {
+    padding: 0;
+    width: 100%;
+  }
+  .story-text {
+    letter-spacing: 0;
+    padding-right: 1rem;
+  }
+
+  .story-companyName {
+    letter-spacing: 0;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .video-container {
+    height: 100vh;
+  }
+
+  .story-heading {
+    font-size: 1.5rem;
+  }
+
+  .story-paragraph {
+    font-size: 1.2rem;
+  }
+
+  .button-shopping {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 1255px) {
+  .video-container {
+    height: 80vh;
+  }
+
+  .story-bg {
+    width: 80%;
+  }
 }
