--- a/TrillionBeauty/src/app/app.component.html
+++ b/TrillionBeauty/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container-fluid col-12 mx-auto p-5">
+<div class="container-fluid col-12 mx-auto">
   <div class="row">
     <div class="col-12">
       <router-outlet></router-outlet>
