--- a/TrillionBeauty/src/app/common/product-card/product-card.component.html
+++ b/TrillionBeauty/src/app/common/product-card/product-card.component.html
@@ -1,22 +1,20 @@
-<div class="container d-flex mb-5 justify-content-center align-item-center">
-  <div class="card col-sm-12-md-3-lg-2">
+<div class="container d-flex mt-5 justify-content-center align-item-center">
+  <div class="card col-sm-12-md-3-lg-2 border-0">
     <img src="{{ product.picture }}" alt="product picture" />
     <div class="card-content">
       <h2>
         {{ product.name }}
       </h2>
       <div style="width: fit-content">
-        <ul>
-          <li>{{ product.usage }} usage</li>
-          <li>{{ product.agegroup }}</li>
-          <li>
-            <a href=""
-              ><i class="bi bi-arrow-right-short"></i>Click for details...</a
-            >
+        <ul class="text-center d-flex justify-content-between">
+          <li class="mt-1">
+            <a href="">Details...</a>
           </li>
-
-          <!--  <li>Tanulok: {{ translate(dog.learning) }}</li>
-          <li>Bevethető vagyok: {{ translate(dog.deployable) }}</li> -->
+          <li>
+            <button class="border-0">
+              <i class="bi bi-cart-plus-fill"></i>
+            </button>
+          </li>
         </ul>
       </div>
     </div>
