--- a/TrillionBeauty/src/app/common/product-card/product-card.component.scss
+++ b/TrillionBeauty/src/app/common/product-card/product-card.component.scss
@@ -4,18 +4,17 @@
 
 .card {
   width: 18rem;
-  height: 27rem;
+  height: 20rem;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
   position: relative;
   color: black;
-  // font-weight: bold;
-  box-shadow: 0 0 5px 5px lightgray;
+  box-shadow: 0 0 15px 1px rgba(211, 211, 211, 0.5);
 
   img {
     position: absolute;
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: 100%;
     top: 0;
@@ -37,6 +36,7 @@
     background-color: rgba(white, 0.8);
     border-radius: 4px;
     font-weight: bold;
+    color: rgb(1, 1, 41);
   }
 
   .card-content {
@@ -46,14 +46,14 @@
   ul {
     position: absolute;
     opacity: 0;
-    width: 300px;
+    width: 250px;
     transition: opacity 0.3s ease-out;
     font-weight: bold;
     list-style-type: none;
     // background-color: rgba(59, 52, 52, 0.4);
-    background-color: rgba(white, 0.8);
+    background-color: rgba(white, 0.7);
     border-radius: 0.3rem;
-    padding: 1rem 0 1rem 2rem;
+    padding: 1rem;
   }
 
   ul,
@@ -65,10 +65,18 @@
     font-weight: bold;
   }
   a {
-    color: black;
+    color: rgb(252, 6, 6);
+    font-weight: bold;
+    text-decoration: none;
+    letter-spacing: 0.1rem;
+    font-size: 20px;
+  }
+  button {
+    background-color: rgba(white, 0.5);
   }
   i {
-    margin-right: 3px;
+    font-size: 20px;
+    color: rgb(252, 6, 6);
   }
 
   &:hover h2 {
