--- a/TrillionBeauty/src/app/pages/products/products.component.html
+++ b/TrillionBeauty/src/app/pages/products/products.component.html
@@ -1,1 +1,6 @@
-<app-product-card></app-product-card>
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-5 mb-5">
+  <app-product-card
+    *ngFor="let product of productList$ | async"
+    [product]="product"
+  ></app-product-card>
+</div>
