home-page-shop-button-working

--- a/TrillionBeauty/src/app/pages/home/home.component.html
+++ b/TrillionBeauty/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
           </p>
           <div class="btn-group button-group-shopping" role="group">
             <button type="button" class="btn-md button-shopping">
-              Shop now
+              <a routerLink="products">Shop now</a>
             </button>
           </div>
         </div>
