--- a/TrillionBeauty/src/app/pages/home/home.component.scss
+++ b/TrillionBeauty/src/app/pages/home/home.component.scss
@@ -68,24 +68,30 @@
 }
 
 .button-shopping {
-  text-shadow: 0.1rem 0.1rem 0.2rem #777;
-  font-size: 1.5rem;
-  font-weight: 700;
   border: none;
   border-radius: 50px;
   padding: 1rem;
   box-shadow: 0 0 1rem 0.2rem rgba(51, 51, 51, 0.6);
-  color: #333;
   background-color: #d4d4d4;
 }
 
 .button-shopping:hover {
   background-color: #777;
-  color: #fff;
   box-shadow: 0 0 3rem 0.2rem rgba(95, 94, 94, 0.6);
-  font-size: 1.6rem;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+  font-size: 1.5rem;
+  text-shadow: 0.1rem 0.1rem 0.2rem #777;
+  font-weight: 700;
+}
+
+a:hover {
+  color: #fff;
+  font-size: 1.6rem;
+}
 @media screen and (max-width: 576px) {
   .video-container {
     height: 100%;
