product-by-id-page-added

--- a/TrillionBeauty/src/app/common/product-card/product-card.component.html
+++ b/TrillionBeauty/src/app/common/product-card/product-card.component.html
@@ -6,15 +6,15 @@
         {{ product.name }}
       </h2>
       <div style="width: fit-content">
-        <ul class="text-center d-flex justify-content-between">
+        <ul class="text-center d-flex justify-content-end">
           <li class="mt-1">
-            <a href="">Details...</a>
+            <a>Details...</a>
           </li>
-          <li>
+          <!--       <li>
             <button class="border-0">
               <i class="bi bi-cart-plus-fill"></i>
             </button>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
