--- a/TrillionBeauty/src/app/pages/product-by-id/product-by-id.component.html
+++ b/TrillionBeauty/src/app/pages/product-by-id/product-by-id.component.html
@@ -85,9 +85,9 @@
               </div>
             </div>
           </div>
-          <div class="d-flex justify-content-end">
-            <span>{{ product.price | currency : "EUR" }}</span>
-            <button class="border-0 bg-transparent">
+          <div class="d-flex justify-content-end mx">
+            <span class="m-5">{{ product.price | currency : "EUR" }}</span>
+            <button class="border-0 bg-transparent me-1">
               <i class="bi bi-cart-plus-fill"></i>
             </button>
           </div>
