--- a/TrillionBeauty/src/app/common/footer/footer.component.html
+++ b/TrillionBeauty/src/app/common/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer class="bg-dark text-center text-white">
+  <div class="pt-3">
+    <section class="mb-3">
+      <a
+        href="https://github.com/anankaaa"
+        target="_blank"
+        class="btn btn-outline-light me-2"
+        ><i class="bi bi-github"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/anita-hegyaljai/"
+        target="_blank"
+        class="btn btn-outline-light me-2"
+        ><i class="bi bi-linkedin"></i
+      ></a>
+    </section>
+  </div>
+  <div class="copyright text-center pb-5">
+    Copyright &copy; AnitaHegyaljai. All Rights Reserved.
+  </div>
+</footer>
