--- a/TrillionBeauty/src/app/pages/home/home.component.scss
+++ b/TrillionBeauty/src/app/pages/home/home.component.scss
@@ -1,7 +1,14 @@
+body {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 .stories {
   padding: 10rem 0;
   position: relative;
   display: flex;
+  height: 80vh;
 }
 
 .video-container {
@@ -9,14 +16,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 70vh;
   opacity: 0.4;
   box-shadow: 0 0 3rem 0.2rem rgba(51, 51, 51, 0.6);
 }
 
 .bg-video {
   width: 100%;
-  height: 100%;
+  height: 80vh;
   object-fit: cover;
 }
 
