--- a/TrillionBeauty/src/app/pages/product-by-id/product-by-id.component.html
+++ b/TrillionBeauty/src/app/pages/product-by-id/product-by-id.component.html
@@ -11,7 +11,7 @@
       <div class="col-md-6">
         <div class="card-body">
           <h1 class="card-title">{{ product.name }}</h1>
-          <p class="card-text">
+          <p class="card-text m-5">
             {{ product.description }}
           </p>
           <div class="accordion accordion-flush" id="accordionFlush">
